# provision

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app_icon.aps  app_icon.rc  compile_commands.json
blend/: cactus.blend  godray.blend  godray.blend1  raven.blend  raven.blend1  sinai.blend  sinai.blend1
cmake/: bootstrap_toolchain.cmake
content/: nomesh.blend
content/blend/: raven.blend  raven.blend1  ship1.blend  terrain.blend  terrain.blend1
content/branding/: icon.blend  icon.blend1
src/: engTools.cpp  engTools.h  engconfig.cpp  engconfig.h  import3d.cpp  import3d.h  logic2d.cpp  logic2d.h  main.cpp
src/engine/: engTools.cpp  engTools.h  engconfig.cpp  engconfig.h  game.cpp  game.h  general2d.cpp  general2d.h  general3d.cpp  general3d.h  globals.cpp  globals.h  import3d.cpp  import3d.h  logic2d.cpp  logic2d.h  material.cpp  material.h  quaternion.cpp  quaternion.h
src/engine/render/: CPURenderer.h  render.cpp  render.h
src/engine/render/components/: CPU2D.cpp  CPU2D.h  CPU3D.cpp  CPU3D.h
src/render/: CPURenderer.cpp  CPURenderer.h
